# nbgitpuller-downloader-plugins

./: .pylintrc  README.md  dev-requirements.txt  setup.cfg
src/nbgitpuller_downloader_dropbox/: dropbox_downloader.py
src/nbgitpuller_downloader_generic_web/: generic_web_downloader.py
src/nbgitpuller_downloader_googledrive/: googledrive_downloader.py
src/nbgitpuller_downloader_plugins_util/: plugin_helper.py
tests/: test_plugin_helper.py
