[metadata]
name = nbgitpuller-downloader-plugins
version = 0.0.0
author = Sean Morris
author_email = sean.smorris@berkeley.edu
description = Downloads compressed archives from Google Drive, dropbox, or any generic web server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jupyterhub/nbgitpuller-downloader-plugins
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where=src

[options.entry_points]
nbgitpuller =
    dropbox=nbgitpuller_downloader_dropbox.dropbox_downloader
    generic_web=nbgitpuller_downloader_generic_web.generic_web_downloader
    googledrive=nbgitpuller_downloader_googledrive.googledrive_downloader
